--- a/memory/bonus_event/bonus_flash_for_stamp/bonus_flash_for_stamp_kaede.html
+++ b/memory/bonus_event/bonus_flash_for_stamp/bonus_flash_for_stamp_kaede.html
@@ -127,7 +127,7 @@
             "txt3_2": "どきどきぴにゃﾁｬﾝｽは毎日",
             "txt3_3": "挑戦できますよ!",
             "txt3_4": "明日のﾁｬﾚﾝｼﾞもお待ちしてます♪",
-            "txt4_1": "11%/28～12%/7の期間中",
+            "txt4_1": "11/28～12/7の期間中",
             "txt4_2": "10周年記念ｽﾀﾝﾌﾟﾛｸﾞｲﾝｷｬﾝﾍﾟｰﾝ",
             "txt4_3": "を開催します｡",
             "txt4_4": "",
@@ -141,12 +141,12 @@
             "txt6_4": "",
             "txt7_1": "次からは3000ぷちﾏﾆｰと",
             "txt7_2": "500友情ptがもらえますよ!",
-            "txt7_3": "※ｷｬﾝﾍﾟｰﾝ期間は11%/28～11%/19",
+            "txt7_3": "※ｷｬﾝﾍﾟｰﾝ期間は11/28～11/19",
             "txt7_4": "までとなります｡",
             "txt8_1": "ｽﾀﾝﾌﾟﾛｸﾞｲﾝﾎﾞｰﾅｽ!",
             "txt8_2": "20000ﾏﾆｰと500友情ptをﾌﾟﾚｾﾞﾝﾄ!",
             "txt8_3": "贈り物から受け取ってくださいね｡",
-            "txt8_4": "※ｷｬﾝﾍﾟｰﾝ期間は11%/28～11%/19までとなります｡",
+            "txt8_4": "※ｷｬﾝﾍﾟｰﾝ期間は11/28～11/19までとなります｡",
             "txt9_1": "さらに､初回ですので",
             "txt9_2": "[ｱﾆﾊﾞｰｻﾘｰｳｨｽﾞﾕｰ]高垣楓をﾌﾟﾚｾﾞﾝﾄ!",
             "txt9_3": "贈り物から受け取ってくださいね｡",
