--- a/memory/bonus_event/bonus_flash_for_stamp/bonus_flash_for_stamp_kaede.html
+++ b/memory/bonus_event/bonus_flash_for_stamp/bonus_flash_for_stamp_kaede.html
@@ -322,7 +322,7 @@
                     var _img_path = window.dir_name + lib.properties.manifest[i].src;
                     var _prefix = lib.properties.manifest[i].id.replace(window.file_name + '_', '');
                     if (window.replace_images[_prefix]) {
-                        _img_path = 'image_sp/' + window.replace_images[_prefix];
+                        _img_path = '../../../image_sp/' + window.replace_images[_prefix];
                     }
                     new_manifest[i] = {
                         'type': 'image',
