--- a/memory/onetime_flash/show_swf/200353.html
+++ b/memory/onetime_flash/show_swf/200353.html
@@ -10,8 +10,8 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href='../../../../css/game/pex.css' media="all">
-    <script src='../../../../js/jquery-1.9.1.min.js'></script>
+    <link rel="stylesheet" href='../../../css/game/pex.css' media="all">
+    <script src='../../../js/jquery-1.9.1.min.js'></script>
     <meta name="authoring-tool" content="Adobe_Animate_CC">
     <style>
         body {
@@ -41,17 +41,17 @@
             window.console.log = function() {};
         })();
     </script>
-    <script type='text/javascript' src='../../../../js/createjs.min.js'></script>
-    <script type='text/javascript' src='../../../../js/app_sound.js'></script>
-    <script type='text/javascript' src='../../../../js/cjs/campaign/anniversary/10th/memorial_month.js'></script>
+    <script type='text/javascript' src='../../../js/createjs.min.js'></script>
+    <script type='text/javascript' src='../../../js/app_sound.js'></script>
+    <script type='text/javascript' src='../../../js/cjs/campaign/anniversary/10th/memorial_month.js'></script>
     <script type='text/javascript'>
         var se_flg = 0,
             bgm_flg = 0,
             chrome_app_flg = 0,
             chrome_app_extension_id = 'dnacabmnfmejgfffmcehejcmiciinpej';
     </script>
-    <script type='text/javascript' src='../../../../js/app_sound.js'></script>
-    <link rel="stylesheet" type="text/css" href="../../../../css/base.css" />
+    <script type='text/javascript' src='../../../js/app_sound.js'></script>
+    <link rel="stylesheet" type="text/css" href="../../../css/base.css" />
 </head>
 
 <body style="margin:0px;">
