--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -221,6 +221,10 @@
                         </div>
                         <div class="idol" style="background:url(../../image_sp/card/xs/fumika_38.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="37">
                         </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/fumika_39.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="38">
+                        </div>
+                        <div class="idol" style="background:url(../../image_sp/card/xs/fumika_40.jpg) no-repeat; background-size:54px 54px;width:54px;height:54px;position:relative;" data-index="39">
+                        </div>
                     </div>
                 </li>
             </ul>
@@ -3588,8 +3592,199 @@ kg
                     },
                     "is_exist_archive": true,
                     "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[ｱﾆﾊﾞｰｻﾘｰﾌﾟﾘﾝｾｽ]鷺沢文香",
+                        "rarity": "5",
+                        "cost": "26",
+                        "attribute": "cool",
+                        "skill_name": "それは素敵な物語",
+                        "skill_effect": "全ﾀｲﾌﾟのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 究極ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "8880",
+                        "default_defense": "6760",
+                        "hash_card_id": "042ab185218d32236d671f2f396f452c",
+                        "alias_name": "ｱﾆﾊﾞｰｻﾘｰﾌﾟﾘﾝｾｽ",
+                        "real_name": "鷺沢文香"
+                    },
+                    "profile": {
+                        "card_id": "2468501",
+                        "card_name": "[アニバーサリープリンセス]鷺沢文香",
+                        "card_kana": "さぎさわふみか",
+                        "card_age": "19",
+                        "card_from": "長野",
+                        "card_height": "162",
+                        "card_weight": "45",
+                        "card_bust": "84",
+                        "card_waist": "54",
+                        "card_hip": "81",
+                        "card_birthday": "10月27日",
+                        "card_constellation": "蠍座",
+                        "card_blood": "AB",
+                        "card_arm": "右",
+                        "card_hobby": "本屋めぐり・栞作り",
+                        "card_cv": "M・A・O"
+                    },
+                    "comments": {
+                        "comment": "…軌跡には､物語が宿ります｡私の歩む道にも､皆さんの人生にも｡…此処に集まったのは…美しい物語たち｡どうか､触れさせて…記憶の一頁に､刻ませてください｡文香という､ｱｲﾄﾞﾙの名を…",
+                        "comments_my_1": "…ここが､私の居場所です",
+                        "comments_my_2": "ふふっ…今､手が触れましたね",
+                        "comments_my_3": "今日も…想い出を司る､一頁を",
+                        "comments_my_4": "幻でも､奇跡でもなく…今日は､私たちが紡いだ確かな現実です",
+                        "comments_my_max": "私を輝かせる物語…綴ってくれたのは､OOさん…",
+                        "comments_work_1": "…皆で綴った､軌跡なんです",
+                        "comments_work_2": "これは…少女が輝き続ける物語",
+                        "comments_work_3": "見えています…皆さんの笑顔…",
+                        "comments_work_4": "…ありがとうございます｡手を､振り返していただきました…",
+                        "comments_work_max": "私の歌や言葉を､貴方の心に刻みたい…叶えていただけますか?",
+                        "comments_work_love_up": "…夢中なんです､私は｡貴方が手渡してくれた､ｱｲﾄﾞﾙの物語に",
+                        "comments_live": "共に…未来へと､手を…",
+                        "comments_love_max": "…今も､新たな物語が生まれています｡私とOOさんから､ﾌｧﾝの方々へと手渡される…銀河のように､煌めく物語が"
+                    },
+                    "voice": {
+                        "comment": "../../sound/2468501/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2468501/my_1.mp3",
+                        "comments_my_2": "../../sound/2468501/my_2.mp3",
+                        "comments_my_3": "../../sound/2468501/my_3.mp3",
+                        "comments_my_4": "../../sound/2468501/my_4.mp3",
+                        "comments_my_max": "../../sound/2468501/my_max.mp3",
+                        "comments_work_1": "../../sound/2468501/work_1.mp3",
+                        "comments_work_2": "../../sound/2468501/work_2.mp3",
+                        "comments_work_3": "../../sound/2468501/work_3.mp3",
+                        "comments_work_4": "../../sound/2468501/work_4.mp3",
+                        "comments_work_max": "../../sound/2468501/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2468501/work_love_up.mp3",
+                        "comments_live": "../../sound/2468501/live.mp3",
+                        "comments_love_max": "../../sound/2468501/love_max.mp3"
+                    },
+                    "event": {
+                        "1738": {
+                            "event_id": 1738,
+                            "category_id": "10020",
+                            "event_name": "アイドルプロデュース<br %/>the 10th Anniversary"
+                        }
+                    },
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8E%E3%81%95%E3%82%8F%E3%81%B5%E3%81%BF%E3%81%8B",
+                    "premium_sign_idol_base_id": "89",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/89_sign_effect",
+                    "archive": {
+                        "normal": "1",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
+                }, {
+                    "data": {
+                        "card_name": "[ｱﾆﾊﾞｰｻﾘｰﾌﾟﾘﾝｾｽ]鷺沢文香+",
+                        "rarity": "6",
+                        "cost": "26",
+                        "attribute": "cool",
+                        "skill_name": "それは素敵な物語",
+                        "skill_effect": "全ﾀｲﾌﾟのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 究極ｱｯﾌﾟ",
+                        "grow_idol_flag": "",
+                        "default_attack": "10656",
+                        "default_defense": "8112",
+                        "skill_effect_2": "全ﾀｲﾌﾟのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 小ｱｯﾌﾟ",
+                        "hash_card_id": "f47e81cd42b475d2e2fae3b2b78afe99",
+                        "alias_name": "ｱﾆﾊﾞｰｻﾘｰﾌﾟﾘﾝｾｽ",
+                        "real_name": "鷺沢文香+"
+                    },
+                    "profile": {
+                        "card_id": "2568502",
+                        "card_name": "[アニバーサリープリンセス]鷺沢文香+",
+                        "card_kana": "さぎさわふみか",
+                        "card_age": "19",
+                        "card_from": "長野",
+                        "card_height": "162",
+                        "card_weight": "45",
+                        "card_bust": "84",
+                        "card_waist": "54",
+                        "card_hip": "81",
+                        "card_birthday": "10月27日",
+                        "card_constellation": "蠍座",
+                        "card_blood": "AB",
+                        "card_arm": "右",
+                        "card_hobby": "本屋めぐり・栞作り",
+                        "card_cv": "M・A・O"
+                    },
+                    "comments": {
+                        "comment": "…頁を捲る度､心に様々な想いが生まれます｡舞台に立つ緊張を思い出し､輝く世界を見た高揚に包まれ…｡そして今は､貴方の優しい微笑みを…ずっと見ていたいという願いが､生まれました",
+                        "comments_my_1": "…ここが､私の居場所です",
+                        "comments_my_2": "ふふっ…今､手が触れましたね",
+                        "comments_my_3": "愛おしい書が､増えました…",
+                        "comments_my_4": "あの…私も､見つめてください｡この頃から､変わりましたか…?",
+                        "comments_my_max": "分厚い書になるほど…同じ時を､貴方と過ごしてきたんですね",
+                        "comments_work_1": "…皆で綴った､軌跡なんです",
+                        "comments_work_2": "これは…少女が輝き続ける物語",
+                        "comments_work_3": "世界は…まだまだ､広がります",
+                        "comments_work_4": "この書も､誰かのよき出会い…そのきっかけとなりますように",
+                        "comments_work_max": "頁を捲り続けましょう…これからも､隣り合って､ずっと…",
+                        "comments_work_love_up": "書を読むOOさん…いつもと同じ､優しい瞳です…",
+                        "comments_live": "物語は､次の頁へと…",
+                        "comments_love_max": "この書は､私を見つけ､輝かせてくれた方に贈ります｡献辞は…OOさんへ｡綴り切れないほどの感謝と､親愛を込めて"
+                    },
+                    "voice": {
+                        "comment": "../../sound/2568502/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2568502/my_1.mp3",
+                        "comments_my_2": "../../sound/2568502/my_2.mp3",
+                        "comments_my_3": "../../sound/2568502/my_3.mp3",
+                        "comments_my_4": "../../sound/2568502/my_4.mp3",
+                        "comments_my_max": "../../sound/2568502/my_max.mp3",
+                        "comments_work_1": "../../sound/2568502/work_1.mp3",
+                        "comments_work_2": "../../sound/2568502/work_2.mp3",
+                        "comments_work_3": "../../sound/2568502/work_3.mp3",
+                        "comments_work_4": "../../sound/2568502/work_4.mp3",
+                        "comments_work_max": "../../sound/2568502/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2568502/work_love_up.mp3",
+                        "comments_live": "../../sound/2568502/live.mp3",
+                        "comments_love_max": "../../sound/2568502/love_max.mp3"
+                    },
+                    "event": null,
+                    "release": "",
+                    "trade_prohibition": {
+                        "is_trade_limit": false
+                    },
+                    "idol_search_param": "keyword=%E3%81%95%E3%81%8E%E3%81%95%E3%82%8F%E3%81%B5%E3%81%BF%E3%81%8B",
+                    "premium_sign_idol_base_id": "89",
+                    "js_premium_sign": "http://sp.pf-img-a.mbga.jp/12008305/?guid=ON&amp;url=http://mobamas.net/idolmaster/js/cjs/89_sign_effect",
+                    "archive": {
+                        "normal": "1",
+                        "premium": "1"
+                    },
+                    "is_exist_archive": true,
+                    "is_max_love": true
                 }];
                 idol.idol_story_list = [{
+                    "story_id": "466",
+                    "story_title": "아이돌 프로듀스 10th Anniversary",
+                    "voice_enable": ["1", "1"],
+                    "flash_path": ["../../idol_story/movie_play/466/1_k.html", 
+                                   "../../idol_story/movie_play/466/2_k.html"],
+                    "voice_url": ["../../idol_story/sound_play/466/1_k.html", 
+                                  "../../idol_story/sound_play/466/2_k.html"],
+                    "open_flag": ["1", "1"],
+                    "icon": ["../../image_sp/ui/episode/epi_button_movie_466_1.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_466_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cool_special.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cool_special_2.png"]
+                }, {
+                    "story_id": "462",
+                    "story_title": "아이돌 프로듀스 the 10th Anniversary",
+                    "voice_enable": ["1", "1"],
+                    "flash_path": ["../../idol_story/movie_play/462/1_k.html", 
+                                   "../../idol_story/movie_play/462/2_k.html"],
+                    "voice_url": ["../../idol_story/sound_play/462/1_k.html", 
+                                  "../../idol_story/sound_play/462/2_k.html"],
+                    "open_flag": ["1", "1"],
+                    "icon": ["../../image_sp/ui/episode/epi_button_movie_462_1.jpg", 
+                             "../../image_sp/ui/episode/epi_button_movie_462_2.jpg"],
+                    "movie_name_voice": ["../../image_sp/ui/episode/epi_button_moviename_cool_early.png", 
+                                         "../../image_sp/ui/episode/epi_button_moviename_cool_late.png"]
+                }, {
                     "story_id": "448",
                     "story_title": "신데렐라 걸 사기사와 후미카",
                     "voice_enable": ["1", "1"],
@@ -3917,7 +4112,9 @@ kg
                           "../../image_sp/card_sign_b/l/fumika_35.jpg", 
                           "../../image_sp/card_sign_b/l/fumika_36.jpg", 
                           "../../image_sp/card_sign_b/l/fumika_37.jpg", 
-                          "../../image_sp/card_sign_b/l/fumika_38.jpg"],
+                          "../../image_sp/card_sign_b/l/fumika_38.jpg", 
+                          "../../image_sp/card_sign_b/l/fumika_39.jpg", 
+                          "../../image_sp/card_sign_b/l/fumika_40.jpg"],
                     "l_premium": {
                         "4": "../../image_sp/card_sign_p/l/fumika_05.jpg",
                         "5": "../../image_sp/card_sign_p/l/fumika_06.jpg",
@@ -3952,7 +4149,9 @@ kg
                         "34": "../../image_sp/card_sign_p/l/fumika_35.jpg",
                         "35": "../../image_sp/card_sign_p/l/fumika_36.jpg",
                         "36": "../../image_sp/card_sign_p/l/fumika_37.jpg",
-                        "37": "../../image_sp/card_sign_p/l/fumika_38.jpg"
+                        "37": "../../image_sp/card_sign_p/l/fumika_38.jpg",
+                        "38": "../../image_sp/card_sign_p/l/fumika_39.jpg",
+                        "39": "../../image_sp/card_sign_p/l/fumika_40.jpg"
                     },
                     "l_nosign": ["", "", "", "", 
                                  "../../image_sp/card/l/fumika_05.jpg", 
@@ -3988,7 +4187,9 @@ kg
                                  "../../image_sp/card/l/fumika_35.jpg", 
                                  "../../image_sp/card/l/fumika_36.jpg", 
                                  "../../image_sp/card/l/fumika_37.jpg", 
-                                 "../../image_sp/card/l/fumika_38.jpg"],
+                                 "../../image_sp/card/l/fumika_38.jpg", 
+                                 "../../image_sp/card/l/fumika_39.jpg", 
+                                 "../../image_sp/card/l/fumika_40.jpg"],
                     "l_nosign_p": {
                         "4": "../../image_sp/card_sign_no_p/l/fumika_05.jpg",
                         "5": "../../image_sp/card_sign_no_p/l/fumika_06.jpg",
@@ -4023,7 +4224,9 @@ kg
                         "34": "../../image_sp/card_sign_no_p/l/fumika_35.jpg",
                         "35": "../../image_sp/card_sign_no_p/l/fumika_36.jpg",
                         "36": "../../image_sp/card_sign_no_p/l/fumika_37.jpg",
-                        "37": "../../image_sp/card_sign_no_p/l/fumika_38.jpg"
+                        "37": "../../image_sp/card_sign_no_p/l/fumika_38.jpg",
+                        "38": "../../image_sp/card_sign_no_p/l/fumika_39.jpg",
+                        "39": "../../image_sp/card_sign_no_p/l/fumika_40.jpg"
                     },
                     "l_noframe": [null, null, null, null, 
                                   "../../image_sp/card/l_noframe/fumika_05.jpg", 
@@ -4059,7 +4262,9 @@ kg
                                   "../../image_sp/card/l_noframe/fumika_35.jpg", 
                                   "../../image_sp/card/l_noframe/fumika_36.jpg", 
                                   "../../image_sp/card/l_noframe/fumika_37.jpg", 
-                                  "../../image_sp/card/l_noframe/fumika_38.jpg"],
+                                  "../../image_sp/card/l_noframe/fumika_38.jpg", 
+                                  "../../image_sp/card/l_noframe/fumika_39.jpg", 
+                                  "../../image_sp/card/l_noframe/fumika_40.jpg"],
                     "mask_l": ["", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
                                "../../image_sp/card/mask_l/45b089ee2ddc60f26d271e1e0a86e0df.png", 
                                "../../image_sp/card/mask_l/1bfbf5c344ce17e6e86444dbb72154d6.png"],
@@ -4111,7 +4316,9 @@ kg
                            "../../image_sp/card/xs/fumika_35.jpg", 
                            "../../image_sp/card/xs/fumika_36.jpg", 
                            "../../image_sp/card/xs/fumika_37.jpg", 
-                           "../../image_sp/card/xs/fumika_38.jpg"],
+                           "../../image_sp/card/xs/fumika_38.jpg", 
+                           "../../image_sp/card/xs/fumika_39.jpg", 
+                           "../../image_sp/card/xs/fumika_40.jpg"],
                     "m2": ["../../image_sp/card/m2/fumika_01.jpg", 
                            "../../image_sp/card/m2/fumika_02.jpg", 
                            "../../image_sp/card/m2/fumika_03.jpg", 
@@ -4149,7 +4356,9 @@ kg
                            "../../image_sp/card/m2/fumika_35.jpg", 
                            "../../image_sp/card/m2/fumika_36.jpg", 
                            "../../image_sp/card/m2/fumika_37.jpg", 
-                           "../../image_sp/card/m2/fumika_38.jpg"],
+                           "../../image_sp/card/m2/fumika_38.jpg", 
+                           "../../image_sp/card/m2/fumika_39.jpg", 
+                           "../../image_sp/card/m2/fumika_40.jpg"],
                     "quest": ["../../image_sp/card/quest/fumika_01.png", 
                               "../../image_sp/card/quest/fumika_02.png", 
                               "../../image_sp/card/quest/fumika_03.png", 
@@ -4187,7 +4396,9 @@ kg
                               "../../image_sp/card/quest/fumika_35.jpg", 
                               "../../image_sp/card/quest/fumika_36.jpg", 
                               "../../image_sp/card/quest/fumika_37.jpg", 
-                              "../../image_sp/card/quest/fumika_38.jpg"]
+                              "../../image_sp/card/quest/fumika_38.jpg", 
+                              "../../image_sp/card/quest/fumika_39.jpg", 
+                              "../../image_sp/card/quest/fumika_40.jpg"]
                 };
                 idol.ios_app_flg = false;
                 idol.apple_review = null;
