--- a/idol_gallery/idol_detail/fumika.html
+++ b/idol_gallery/idol_detail/fumika.html
@@ -3666,7 +3666,7 @@ kg
                         "1738": {
                             "event_id": 1738,
                             "category_id": "10020",
-                            "event_name": "アイドルプロデュース<br %/>the 10th Anniversary"
+                            "event_name": "アイドルプロデュース the 10th Anniversary"
                         }
                     },
                     "release": "",
