--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -3594,35 +3594,35 @@ kg
                     "is_max_love": true
                 }, {
                     "data": {
-                        "card_name": "[ｱﾆﾊﾞｰｻﾘｰﾌﾟﾘﾝｾｽ]鷺沢文香",
+                        "card_name": "[애니버서리 프린세스]사기사와 후미카",
                         "rarity": "5",
                         "cost": "26",
                         "attribute": "cool",
-                        "skill_name": "それは素敵な物語",
-                        "skill_effect": "全ﾀｲﾌﾟのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 究極ｱｯﾌﾟ",
+                        "skill_name": "정말로 멋진 이야기",
+                        "skill_effect": "전 타입의 프론트 멤버 및 백멤버 상위 5인의 공 궁극 업",
                         "grow_idol_flag": "",
                         "default_attack": "8880",
                         "default_defense": "6760",
                         "hash_card_id": "042ab185218d32236d671f2f396f452c",
-                        "alias_name": "ｱﾆﾊﾞｰｻﾘｰﾌﾟﾘﾝｾｽ",
-                        "real_name": "鷺沢文香"
+                        "alias_name": "애니버서리 프린세스",
+                        "real_name": "사기사와 후미카"
                     },
                     "profile": {
                         "card_id": "2468501",
                         "card_name": "[アニバーサリープリンセス]鷺沢文香",
-                        "card_kana": "さぎさわふみか",
+                        "card_kana": "사기사와 후미카",
                         "card_age": "19",
-                        "card_from": "長野",
+                        "card_from": "나가노",
                         "card_height": "162",
                         "card_weight": "45",
                         "card_bust": "84",
                         "card_waist": "54",
                         "card_hip": "81",
-                        "card_birthday": "10月27日",
-                        "card_constellation": "蠍座",
+                        "card_birthday": "10월 27일",
+                        "card_constellation": "전갈자리",
                         "card_blood": "AB",
-                        "card_arm": "右",
-                        "card_hobby": "本屋めぐり・栞作り",
+                        "card_arm": "오른쪽",
+                        "card_hobby": "서점 순례・책갈피 만들기",
                         "card_cv": "M・A・O"
                     },
                     "comments": {
@@ -3661,7 +3661,7 @@ kg
                         "1738": {
                             "event_id": 1738,
                             "category_id": "10020",
-                            "event_name": "アイドルプロデュース<br %/>the 10th Anniversary"
+                            "event_name": "아이돌 프로듀스 the 10th Anniversary"
                         }
                     },
                     "release": "",
@@ -3679,36 +3679,36 @@ kg
                     "is_max_love": true
                 }, {
                     "data": {
-                        "card_name": "[ｱﾆﾊﾞｰｻﾘｰﾌﾟﾘﾝｾｽ]鷺沢文香+",
+                        "card_name": "[애니버서리 프린세스]사기사와 후미카+",
                         "rarity": "6",
                         "cost": "26",
                         "attribute": "cool",
-                        "skill_name": "それは素敵な物語",
-                        "skill_effect": "全ﾀｲﾌﾟのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 究極ｱｯﾌﾟ",
+                        "skill_name": "정말로 멋진 이야기",
+                        "skill_effect": "전 타입의 프론트 멤버 및 백멤버 상위 5인의 공 궁극 업",
                         "grow_idol_flag": "",
                         "default_attack": "10656",
                         "default_defense": "8112",
-                        "skill_effect_2": "全ﾀｲﾌﾟのﾌﾛﾝﾄﾒﾝﾊﾞｰ及びﾊﾞｯｸﾒﾝﾊﾞｰ上位5人の攻 小ｱｯﾌﾟ",
+                        "skill_effect_2": "전 타입의 프론트 멤버 및 백멤버 상위 5인의 공 소 업",
                         "hash_card_id": "f47e81cd42b475d2e2fae3b2b78afe99",
-                        "alias_name": "ｱﾆﾊﾞｰｻﾘｰﾌﾟﾘﾝｾｽ",
-                        "real_name": "鷺沢文香+"
+                        "alias_name": "애니버서리 프린세스",
+                        "real_name": "사기사와 후미카+"
                     },
                     "profile": {
                         "card_id": "2568502",
                         "card_name": "[アニバーサリープリンセス]鷺沢文香+",
-                        "card_kana": "さぎさわふみか",
+                        "card_kana": "사기사와 후미카",
                         "card_age": "19",
-                        "card_from": "長野",
+                        "card_from": "나가노",
                         "card_height": "162",
                         "card_weight": "45",
                         "card_bust": "84",
                         "card_waist": "54",
                         "card_hip": "81",
-                        "card_birthday": "10月27日",
-                        "card_constellation": "蠍座",
+                        "card_birthday": "10월 27일",
+                        "card_constellation": "전갈자리",
                         "card_blood": "AB",
-                        "card_arm": "右",
-                        "card_hobby": "本屋めぐり・栞作り",
+                        "card_arm": "오른쪽",
+                        "card_hobby": "서점 순례・책갈피 만들기",
                         "card_cv": "M・A・O"
                     },
                     "comments": {
