--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -3626,20 +3626,20 @@ kg
                         "card_cv": "M・A・O"
                     },
                     "comments": {
-                        "comment": "…軌跡には､物語が宿ります｡私の歩む道にも､皆さんの人生にも｡…此処に集まったのは…美しい物語たち｡どうか､触れさせて…記憶の一頁に､刻ませてください｡文香という､ｱｲﾄﾞﾙの名を…",
-                        "comments_my_1": "…ここが､私の居場所です",
-                        "comments_my_2": "ふふっ…今､手が触れましたね",
-                        "comments_my_3": "今日も…想い出を司る､一頁を",
-                        "comments_my_4": "幻でも､奇跡でもなく…今日は､私たちが紡いだ確かな現実です",
-                        "comments_my_max": "私を輝かせる物語…綴ってくれたのは､OOさん…",
-                        "comments_work_1": "…皆で綴った､軌跡なんです",
-                        "comments_work_2": "これは…少女が輝き続ける物語",
-                        "comments_work_3": "見えています…皆さんの笑顔…",
-                        "comments_work_4": "…ありがとうございます｡手を､振り返していただきました…",
-                        "comments_work_max": "私の歌や言葉を､貴方の心に刻みたい…叶えていただけますか?",
-                        "comments_work_love_up": "…夢中なんです､私は｡貴方が手渡してくれた､ｱｲﾄﾞﾙの物語に",
-                        "comments_live": "共に…未来へと､手を…",
-                        "comments_love_max": "…今も､新たな物語が生まれています｡私とOOさんから､ﾌｧﾝの方々へと手渡される…銀河のように､煌めく物語が"
+                        "comment": "…궤적에는, 이야기가 깃듭니다. 제가 걷는 길에도, 여러분의 인생에도. …여기에 모인 건… 아름다운 이야기들. 부디, 읽게… 기억의 한 페이지에, 새기게 해주세요. 후미카라는, 아이돌의 이름을…",
+                        "comments_my_1": "…여기가, 제가 있을 곳입니다.",
+                        "comments_my_2": "후훗… 지금, 손이 닿았네요.",
+                        "comments_my_3": "오늘도… 추억을 맡는, 한 페이지를.",
+                        "comments_my_4": "환상도, 기적도 아닌… 오늘은, 저희가 자아낸 확실한 현실입니다.",
+                        "comments_my_max": "절 빛나게 하는 이야기… 엮어주신 건, OO 씨…",
+                        "comments_work_1": "…다함께 자아낸, 궤적입니다.",
+                        "comments_work_2": "이건… 소녀가 계속 반짝이는 이야기.",
+                        "comments_work_3": "보이고 있습니다… 여러분의 미소…",
+                        "comments_work_4": "…감사합니다. 손을, 과거를 돌아보겠습니다…",
+                        "comments_work_max": "제 노래나 말을, 당신의 가슴에 새기고 싶어… 이뤄주시겠습니까?",
+                        "comments_work_love_up": "…푹 빠져있습니다, 저는. 당신이 건네주신, 아이돌의 이야기에.",
+                        "comments_live": "함께… 미래로, 손을…",
+                        "comments_love_max": "…지금도, 새로운 이야기가 태어나고 있습니다. 저와 OO 씨로부터, 팬 분들께 전해지는… 은하처럼, 반짝이는 이야기가."
                     },
                     "voice": {
                         "comment": "../../sound/2468501/idolcomment.mp3",
@@ -3712,20 +3712,20 @@ kg
                         "card_cv": "M・A・O"
                     },
                     "comments": {
-                        "comment": "…頁を捲る度､心に様々な想いが生まれます｡舞台に立つ緊張を思い出し､輝く世界を見た高揚に包まれ…｡そして今は､貴方の優しい微笑みを…ずっと見ていたいという願いが､生まれました",
-                        "comments_my_1": "…ここが､私の居場所です",
-                        "comments_my_2": "ふふっ…今､手が触れましたね",
-                        "comments_my_3": "愛おしい書が､増えました…",
-                        "comments_my_4": "あの…私も､見つめてください｡この頃から､変わりましたか…?",
-                        "comments_my_max": "分厚い書になるほど…同じ時を､貴方と過ごしてきたんですね",
-                        "comments_work_1": "…皆で綴った､軌跡なんです",
-                        "comments_work_2": "これは…少女が輝き続ける物語",
-                        "comments_work_3": "世界は…まだまだ､広がります",
-                        "comments_work_4": "この書も､誰かのよき出会い…そのきっかけとなりますように",
-                        "comments_work_max": "頁を捲り続けましょう…これからも､隣り合って､ずっと…",
-                        "comments_work_love_up": "書を読むOOさん…いつもと同じ､優しい瞳です…",
-                        "comments_live": "物語は､次の頁へと…",
-                        "comments_love_max": "この書は､私を見つけ､輝かせてくれた方に贈ります｡献辞は…OOさんへ｡綴り切れないほどの感謝と､親愛を込めて"
+                        "comment": "…페이지를 넘길 때마다, 마음에 여러가지 생각이 생겨납니다. 무대에 서는 긴장을 떠올리고, 빛나는 세계를 본 고양감에 휩싸여…. 그리고 지금은, 당신의 상냥한 미소를… 계속 보고 싶다는 소원이, 생겨났습니다.",
+                        "comments_my_1": "…여기가, 제가 있을 곳입니다.",
+                        "comments_my_2": "후훗… 지금, 손이 닿았네요.",
+                        "comments_my_3": "사랑스러운 책이, 늘었습니다…",
+                        "comments_my_4": "저기… 저도, 바라봐주세요. 이 때로부터, 변했나요…?",
+                        "comments_my_max": "두꺼운 책이 될 정도로… 같은 시간을, 당신과 보내왔네요.",
+                        "comments_work_1": "…다함께 자아낸, 궤적입니다.",
+                        "comments_work_2": "이건… 소녀가 계속 반짝이는 이야기.",
+                        "comments_work_3": "세계는… 아직도, 넓어집니다.",
+                        "comments_work_4": "이 책도, 누군가의 좋은 만남… 그 계기가 되기를.",
+                        "comments_work_max": "페이지를 계속 넘기죠… 앞으로도, 서로의 곁에서, 계속…",
+                        "comments_work_love_up": "책을 읽는 OO 씨… 언제나와 같은, 상냥한 눈동자입니다…",
+                        "comments_live": "이야기는, 다음 장으로…",
+                        "comments_love_max": "이 책은, 저를 발견해, 빛나게 해주신 분께 보냅니다. 헌사는… OO 씨께. 이루 말할 수 없을 정도의 감사와, 친애를 담아서."
                     },
                     "voice": {
                         "comment": "../../sound/2568502/idolcomment.mp3",
