--- a/idol_gallery/idol_detail/fumika_k.html
+++ b/idol_gallery/idol_detail/fumika_k.html
@@ -3716,7 +3716,7 @@ kg
                         "comments_my_1": "…여기가, 제가 있을 곳입니다.",
                         "comments_my_2": "후훗… 지금, 손이 닿았네요.",
                         "comments_my_3": "사랑스러운 책이, 늘었습니다…",
-                        "comments_my_4": "저기… 저도, 바라봐주세요. 이 때로부터, 변했나요…?",
+                        "comments_my_4": "저기… 저도, 바라봐주세요. 이 때로부터, 변할 수 있었나요…?",
                         "comments_my_max": "두꺼운 책이 될 정도로… 같은 시간을, 당신과 보내왔네요.",
                         "comments_work_1": "…다함께 자아낸, 궤적입니다.",
                         "comments_work_2": "이건… 소녀가 계속 반짝이는 이야기.",
